added color container style

--- a/CSS/_mediaquery.scss
+++ b/CSS/_mediaquery.scss
@@ -269,7 +269,7 @@
                 height: 900px;
             }
             .image-container1{
-                background-color: $colorTheme4;
+                background-color: $colorThemeOne4;
                 margin-top: 100px;
                 overflow: hidden;
                 width: 100%;
