--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -155,13 +155,13 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background-color: orange;
+  background: linear-gradient(90deg, rgb(0, 135, 38) 0%, rgb(132, 28, 38) 25%, rgb(95, 15, 64) 50%, rgb(68, 3, 129) 75%);
 }
 .page1 .nav-bar .navbar-content .theme-container {
   position: absolute;
   width: 30px;
   height: 0px;
-  box-shadow: -1px 1px 10px -5px black;
+  box-shadow: 0px 5px 10px -5px black;
   background-color: white;
   top: 55px;
   right: -5px;
@@ -171,6 +171,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  border-radius: 15px;
 }
 .page1 .nav-bar .navbar-content .theme-container .color {
   width: 20px;
@@ -591,12 +592,21 @@ footer .container5 .contact-container .contact-right label {
   .page1 .nav-bar .navbar-content ul {
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin: 50px 0 0 0;
     width: 100%;
     height: 100%;
   }
   .page1 .nav-bar .navbar-content ul a li {
     margin: 40px 0 0 0;
+  }
+  .page1 .nav-bar .navbar-content .theme-button {
+    display: none;
+  }
+  .page1 .nav-bar .navbar-content .theme-container {
+    height: 200px;
+    box-shadow: none;
+    background-color: none;
+    right: 13px;
   }
   .page1 .nav-bar .bar-container {
     display: block;
