--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -3,7 +3,7 @@ $colorThemeOne1: #008726;
 $colorThemeOne2: #32b92c;
 $colorThemeOne3: linear-gradient(90deg, rgba(0,135,38,1) 0%, rgba(50,185,44,1) 100%);
 $colorThemeOne4: #272d2d;
-$themeButtonColor: orange;
+$themeButtonColor: linear-gradient(90deg, rgba(0,135,38,1) 0%, rgba(132,28,38,1) 25%, rgba(95,15,64,1) 50%, rgba(68,3,129,1) 75%);
 $colorThemeTwo1: #841c26;
 $colorThemeThree1: #5f0f40;
 $colorThemeFour1:#440381;
@@ -137,13 +137,13 @@ $colorThemeFour1:#440381;
                 width: 20px;
                 height: 20px;
                 border-radius: 50%;
-                background-color: $themeButtonColor;
+                background: $themeButtonColor;
             }
             .theme-container{
                 position: absolute;
                 width: 30px;
                 height: 0px;
-                box-shadow: -1px 1px 10px -5px black;
+                box-shadow: 0px 5px 10px -5px black;
                 background-color: white;
                 top: 55px;
                 right: -5px;
@@ -153,6 +153,7 @@ $colorThemeFour1:#440381;
                 flex-direction: column;
                 align-items: center;
                 justify-content: space-evenly;
+                border-radius: 15px;
                 
                 .color{
                     width: 20px;
