--- a/CSS/_mediaquery.scss
+++ b/CSS/_mediaquery.scss
@@ -254,7 +254,7 @@
                 .theme-container{
                     height:200px;
                     box-shadow: none;
-                    background-color: none;
+                    background-color: transparent;
                     right: 13px;
                 }
             }
