--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -103,7 +103,7 @@
   top: 0;
   bottom: 0;
   right: 0;
-  height: 50px;
+  height: 60px;
   background: white;
   z-index: 10;
   -webkit-backdrop-filter: blur(10px);
@@ -127,6 +127,14 @@
   100% {
     transform: none;
   }
+}
+.page1 .nav-bar .logo-container {
+  position: absolute;
+  margin-left: 8%;
+  top: 8px;
+}
+.page1 .nav-bar .logo-container img {
+  width: 45px;
 }
 .page1 .nav-bar .navbar-content {
   width: 90%;
